--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -206,6 +206,9 @@ config CPU_FREQ_GOV_CONSERVATIVE
 
 	  If in doubt, say N.
 
+config CPU_FREQ_GOV_PEGASUSQ
+	tristate "'pegasusq' cpufreq policy governor"
+
 config CPU_FREQ_WAKEUP_BOOST
 	bool "CPU frequency boost during wakeup"
 	depends on CPU_FREQ_GOV_ONDEMAND
