bcmdhd: Enable all bands

--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -140,9 +140,7 @@ endif
   DHDCFLAGS += -DDISABLE_WL_FRAMEBURST_SOFTAP
 endif
 
-#ifneq ($(CONFIG_SEMC_WLAN_BAND),)
-#  DHDCFLAGS += -DSEMC_WLAN_BAND=$(CONFIG_SEMC_WLAN_BAND)
-#endif
+DHDCFLAGS += -DSEMC_WLAN_BAND=WLC_BAND_ALL
 
 #ifneq ($(CONFIG_SOMC_WLAN_BCN_TIMEOUT),)
 #  DHDCFLAGS += -DSOMC_WLAN_BCN_TIMEOUT=$(CONFIG_SOMC_WLAN_BCN_TIMEOUT)
