--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -138,6 +138,8 @@ endif
   DHDCFLAGS += -DSUPPORT_WL_TXPOWER
   DHDCFLAGS += -DSUPPORT_2G_VHT
   DHDCFLAGS += -DDISABLE_WL_FRAMEBURST_SOFTAP
+  DHDCFLAGS += -DCONFIG_DHD_USE_STATIC_BUF
+  DHDCFLAGS += -DENHANCED_STATIC_BUF
 endif
 
 DHDCFLAGS += -DSEMC_WLAN_BAND=WLC_BAND_ALL
