--- a/drivers/net/wireless/bcmdhd/Kbuild
+++ b/drivers/net/wireless/bcmdhd/Kbuild
@@ -1,4 +1,47 @@
-# bcmdhd
+MODNAME := wlan
+
+BCM_DIR :=	bcmdhd
+BCM_INC_DIR :=	drivers/net/wireless/bcmdhd/include
+BCM_SRC_DIR :=	drivers/net/wireless/bcmdhd
+
+BCM_INC := 	-I$(BCM_INC_DIR) \
+		-I$(BCM_SRC_DIR)
+
+BCM_OBJS := bcmsdh.o \
+		bcmsdh_linux.o \
+		bcmsdh_sdmmc.o \
+		bcmsdh_sdmmc_linux.o \
+		dhd_cdc.o \
+		dhd_cfg80211.o \
+		dhd_common.o \
+		dhd_custom_gpio.o \
+		dhd_ip.o \
+		dhd_linux.o \
+		dhd_linux_sched.o \
+		dhd_sdio.o \
+		dhd_pno.o \
+		dhd_wlfc.o \
+		aiutils.o \
+		bcmevent.o \
+		bcmutils.o \
+		bcmwifi_channels.o \
+		hndpmu.o \
+		linux_osl.o \
+		sbutils.o \
+		siutils.o \
+		wldev_common.o \
+		wl_android.o \
+		wl_cfg80211.o \
+		wl_cfgp2p.o \
+		wl_linux_mon.o
+
+LINUX_INC :=	-Iinclude/linux
+
+INCS :=		$(BCM_INC)
+
+OBJS :=		$(BCM_OBJS)
+
+EXTRA_CFLAGS += $(INCS)
 
 #####################
 # SDIO Basic feature
@@ -18,7 +61,7 @@ DHDCFLAGS = -Wall -Wstrict-prototypes -Dlinux -DLINUX -DBCMDRIVER             \
 DHDCFLAGS += -DCUSTOMER_HW2
 DHDCFLAGS += -DWL_CFG80211 -DROAM_ENABLE -DVSDB -DPROP_TXSTATUS	\
 	 -DWL_SUPPORT_AUTO_CHANNEL -DSUPPORT_HIDDEN_AP 	\
-	 -DSUPPORT_AMPDU_MPDU_CMD -DSUPPORT_PM2_ONLY	\
+	 -DSUPPORT_AMPDU_MPDU_CMD	-DSUPPORT_PM2_ONLY	\
 	 -DWL_ENABLE_P2P_IF -DWL_CFG80211_STA_EVENT -DWL_IFACE_COMB_NUM_CHANNELS
 
 # Debug
@@ -84,7 +127,6 @@ DHDCFLAGS += -DUSE_INITIAL_SHORT_DWELL_TIME
 DHDCFLAGS += -DCUSTOM_PNO_EVENT_LOCK_xTIME=10
 # set keep alive period
 DHDCFLAGS += -DCUSTOM_KEEP_ALIVE_SETTING=55000
-# set roam setting values
 DHDCFLAGS += -DCUSTOM_ROAM_TRIGGER_SETTING=-75
 DHDCFLAGS += -DCUSTOM_ROAM_DELTA_SETTING=10
 
@@ -136,40 +178,32 @@ endif
   DHDCFLAGS += -DDHD_ENABLE_LPC
   DHDCFLAGS += -DSUPPORT_LTECX
   DHDCFLAGS += -DSUPPORT_WL_TXPOWER
-  DHDCFLAGS += -DSUPPORT_2G_VHT
+# DHDCFLAGS += -DSUPPORT_2G_VHT
   DHDCFLAGS += -DDISABLE_WL_FRAMEBURST_SOFTAP
-  DHDCFLAGS += -DCONFIG_DHD_USE_STATIC_BUF
-  DHDCFLAGS += -DENHANCED_STATIC_BUF
 endif
 
-DHDCFLAGS += -DSEMC_WLAN_BAND=WLC_BAND_ALL
+  DHDCFLAGS += -DSEMC_WLAN_BAND=WLC_BAND_2G
 
-#ifneq ($(CONFIG_SOMC_WLAN_BCN_TIMEOUT),)
-#  DHDCFLAGS += -DSOMC_WLAN_BCN_TIMEOUT=$(CONFIG_SOMC_WLAN_BCN_TIMEOUT)
-#endif
+ifneq ($(CONFIG_SOMC_WLAN_BCN_TIMEOUT),)
+  DHDCFLAGS += -DSOMC_WLAN_BCN_TIMEOUT=$(CONFIG_SOMC_WLAN_BCN_TIMEOUT)
+endif
 
 DHDCFLAGS += -DSOMC_MAX_ASSOC_NUM=10
 
 DHDCFLAGS += -DSOMC_MIRACAST_STATISTICS
 
-#EXTRA_LDFLAGS += --strip-debug
-EXTRA_CFLAGS += $(DHDCFLAGS) -DDHD_DEBUG
-EXTRA_CFLAGS += -DSRCBASE=\"$(src)\"
-EXTRA_CFLAGS += -I$(src)/include/ -I$(src)/
-KBUILD_CFLAGS += -I$(LINUXDIR)/include -I$(shell pwd)
-
-DHDOFILES = bcmsdh.o bcmsdh_linux.o bcmsdh_sdmmc.o bcmsdh_sdmmc_linux.o \
-	dhd_cdc.o dhd_cfg80211.o dhd_common.o dhd_custom_gpio.o dhd_ip.o    \
-	dhd_linux.o dhd_linux_sched.o dhd_sdio.o dhd_pno.o dhd_wlfc.o aiutils.o       \
-	bcmevent.o bcmutils.o bcmwifi_channels.o hndpmu.o linux_osl.o       \
-	sbutils.o siutils.o wldev_common.o wl_android.o wl_cfg80211.o       \
-	wl_cfgp2p.o wl_linux_mon.o
-
-ifeq ($(CONFIG_MACH_SONY_SIRIUS),y)
-obj-$(CONFIG_BCMDHD) += wlan.o
-wlan-objs += $(DHDOFILES)
-else
-obj-$(CONFIG_BCMDHD) += bcmdhd.o
-bcmdhd-objs += $(DHDOFILES)
+# Default Listen Interval in Beacons
+ifneq ($(CONFIG_SOMC_WLAN_LISTEN_INTERVAL),)
+  DHDCFLAGS += -DCUSTOM_LISTEN_INTERVAL=$(CONFIG_SOMC_WLAN_LISTEN_INTERVAL)
 endif
 
+#EXTRA_LDFLAGS += --strip-debug
+EXTRA_CFLAGS += -DDHD_DEBUG
+EXTRA_CFLAGS += -DSRCBASE=\"$(src)\"
+
+KBUILD_CPPFLAGS += $(DHDCFLAGS)
+
+# Module information used by KBuild framework
+obj-$(CONFIG_BCMDHD) += $(MODNAME).o
+
+$(MODNAME)-y := $(OBJS)
