--- a/arch/arm/configs/CoCore-L_defconfig
+++ b/arch/arm/configs/CoCore-L_defconfig
@@ -50,8 +50,8 @@ CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_XZ is not set
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -1577,7 +1577,15 @@ CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCMDHD is not set
+CONFIG_BCMDHD=m
+CONFIG_BCM4339=y
+# CONFIG_BCM4350 is not set
+CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/wlan/bcmdhd/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/wlan/bcmdhd/bcmdhd.cal"
+# CONFIG_BCMDHD_INSMOD_NO_FW_LOAD is not set
+# CONFIG_DHD_USE_STATIC_BUF is not set
+CONFIG_BCMDHD_HW_OOB=y
+# CONFIG_DHD_USE_SCHED_SCAN is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
