bcmdhd: update configs from somc vendor
CONFIG_INSMOD_NO_FW_MOD needs to be enabled

Signed-off-by: Ji Huang <cocafehj@qq.com>

--- a/drivers/net/wireless/bcmdhd/Kconfig
+++ b/drivers/net/wireless/bcmdhd/Kconfig
@@ -40,9 +40,10 @@ config BCMDHD_NVRAM_PATH
 config BCMDHD_INSMOD_NO_FW_LOAD
 	bool "Enable delayed firmware load"
 	depends on BCMDHD
-	default n
+	default y
 	---help---
 	Enable delayes firmware
+	Enable this feature to communicate with android system command
 
 config DHD_USE_STATIC_BUF
 	bool "Enable memory preallocation"
