bcmdhd: reduce module size greatly, enable VHT
Now the size looks like the stock one, around 700k.
Ane enable experimental VHT feature.

Signed-off-by: Ji Huang <cocafehj@qq.com>

--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -143,7 +143,7 @@ endif
   DHDCFLAGS += -DDHD_ENABLE_LPC
   DHDCFLAGS += -DSUPPORT_LTECX
   DHDCFLAGS += -DSUPPORT_WL_TXPOWER
-# DHDCFLAGS += -DSUPPORT_2G_VHT
+  DHDCFLAGS += -DSUPPORT_2G_VHT
   DHDCFLAGS += -DDISABLE_WL_FRAMEBURST_SOFTAP
 endif
 
@@ -164,8 +164,9 @@ ifneq ($(CONFIG_SOMC_WLAN_LISTEN_INTERVAL),)
   DHDCFLAGS += -DCUSTOM_LISTEN_INTERVAL=$(CONFIG_SOMC_WLAN_LISTEN_INTERVAL)
 endif
 
+# Reduce generated code size
+EXTRA_LDFLAGS += --strip-debug
 
-#EXTRA_LDFLAGS += --strip-debug
 EXTRA_CFLAGS += $(DHDCFLAGS) -DDHD_DEBUG
 EXTRA_CFLAGS += -DSRCBASE=\"$(src)\"
 EXTRA_CFLAGS += -I$(src)/include/ -I$(src)/
