defconfig: update configs

--- a/arch/arm/configs/CoCore-L_defconfig
+++ b/arch/arm/configs/CoCore-L_defconfig
@@ -50,8 +50,8 @@ CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-CONFIG_KERNEL_XZ=y
-# CONFIG_KERNEL_LZO is not set
+# CONFIG_KERNEL_XZ is not set
+CONFIG_KERNEL_LZO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -646,7 +646,7 @@ CONFIG_ARCH_NR_GPIO=0
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ=100
+CONFIG_HZ=300
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
@@ -1582,10 +1582,10 @@ CONFIG_BCM4339=y
 # CONFIG_BCM4350 is not set
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/wlan/bcmdhd/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/wlan/bcmdhd/bcmdhd.cal"
-# CONFIG_BCMDHD_INSMOD_NO_FW_LOAD is not set
+CONFIG_BCMDHD_INSMOD_NO_FW_LOAD=y
 # CONFIG_DHD_USE_STATIC_BUF is not set
 CONFIG_BCMDHD_HW_OOB=y
-# CONFIG_DHD_USE_SCHED_SCAN is not set
+CONFIG_DHD_USE_SCHED_SCAN=y
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
