--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -143,7 +143,7 @@ endif
   DHDCFLAGS += -DDHD_ENABLE_LPC
   DHDCFLAGS += -DSUPPORT_LTECX
   DHDCFLAGS += -DSUPPORT_WL_TXPOWER
-  DHDCFLAGS += -DSUPPORT_2G_VHT
+# DHDCFLAGS += -DSUPPORT_2G_VHT
   DHDCFLAGS += -DDISABLE_WL_FRAMEBURST_SOFTAP
 endif
 
