defconfig: update configs
Signed-off-by: Ji Huang <cocafehj@qq.com>

--- a/arch/arm/configs/cocore-l_defconfig
+++ b/arch/arm/configs/cocore-l_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-CoCore-L"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1538,7 +1538,15 @@ CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCMDHD is not set
+CONFIG_BCMDHD=m
+CONFIG_BCM4339=y
+# CONFIG_BCM4350 is not set
+CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/wlan/bcmdhd/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/wlan/bcmdhd/bcmdhd.cal"
+CONFIG_BCMDHD_INSMOD_NO_FW_LOAD=y
+# CONFIG_DHD_USE_STATIC_BUF is not set
+CONFIG_BCMDHD_HW_OOB=y
+CONFIG_DHD_USE_SCHED_SCAN=y
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
